[project]
name = "streamax-private"
version = "0.1.0"
description = "StreaMAX private pipeline"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.21.0",
    "astropy>=5.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "dynesty>=2.0.0",
    "corner>=2.2.0",
    "flax>=0.6.0",
    "pandas>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
